[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Other/Pause.gd" type="Script" id=1]
[ext_resource path="res://Sprites/GUI/Pause.png" type="Texture" id=2]
[ext_resource path="res://Sprites/GUI/Theme/theme.tres" type="Theme" id=3]
[ext_resource path="res://Scenes/Player/mouse.tscn" type="PackedScene" id=4]

[node name="Pause" type="CanvasLayer"]
layer = 0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 404.668, 502.69 )
scale = Vector2( 29.8012, 15.958 )
texture = ExtResource( 2 )

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -342.0
margin_top = -111.0
margin_right = 327.0
margin_bottom = -52.0
focus_mode = 0
theme = ExtResource( 3 )
enabled_focus_mode = 0
text = "Reprendre"

[node name="Options" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -342.0
margin_top = -20.0
margin_right = -17.5
margin_bottom = 39.0
focus_mode = 0
theme = ExtResource( 3 )
enabled_focus_mode = 0
text = "Options"

[node name="Succes" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 1.77869
margin_top = -18.8931
margin_right = 326.279
margin_bottom = 40.1069
focus_mode = 0
theme = ExtResource( 3 )
enabled_focus_mode = 0
text = "Succ√®s"

[node name="Quitter" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -342.0
margin_top = 70.0
margin_right = 327.0
margin_bottom = 129.0
focus_mode = 0
theme = ExtResource( 3 )
enabled_focus_mode = 0
text = "Quitter"

[node name="mouse" parent="." instance=ExtResource( 4 )]
position = Vector2( 170, 370 )
scale = Vector2( 3, 3 )
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Succes" to="." method="_on_Succes_pressed"]
[connection signal="pressed" from="Quitter" to="." method="_on_Quitter_pressed"]
